<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:layout_marginHorizontal="20dp">

  <EditText
      android:id="@+id/edit_restore_auth_mail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginHorizontal="10dp"
      android:paddingVertical="7dp"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:backgroundTint="@color/darkerGrey"
      android:textColorHint="@color/hintTextColor"
      android:hint="@string/hint_mail"
      android:inputType="textEmailAddress"
      android:textSize="16sp"
      android:textCursorDrawable="@null"
      android:textColor="@android:color/white"
      android:textStyle="italic"/>

  <Button
      android:id="@+id/button_send_code"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingHorizontal="20dp"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      android:layout_below="@+id/edit_restore_auth_mail"
      android:background="@drawable/button_round"
      android:text="@string/button_send_code"/>

  <ProgressBar
      style="?android:attr/progressBarStyleLarge"
      android:id="@+id/progress_overlay"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:background="@null"
      android:layout_marginTop="10dp"
      android:layout_below="@+id/button_send_code"
      android:indeterminateTint="@color/svl_yellow"
      android:visibility="invisible"
      android:indeterminateTintMode="src_atop"/>

  <TextView
      android:id="@+id/text_code"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="20dp"
      android:layout_below="@+id/progress_overlay"
      android:background="@color/grey"
      android:text="@string/text_should_send_code"
      android:textSize="13sp"
      android:textColor="@android:color/white"
      android:textStyle="italic"/>

  <EditText
      android:id="@+id/edit_restore_auth_code"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:paddingVertical="7dp"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:layout_marginTop="10dp"
      android:layout_below="@+id/text_code"
      android:backgroundTint="@color/darkerGrey"
      android:textColorHint="@color/hintTextColor"
      android:duplicateParentState="false"
      android:enabled="false"
      android:hint="@string/hint_restore_cde"
      android:inputType="text"
      android:textCursorDrawable="@null"
      android:textColor="@android:color/white"
      android:textSize="16sp"
      android:textStyle="italic"/>

  <Button
      android:id="@+id/button_restore_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_below="@+id/edit_restore_auth_code"
      android:paddingHorizontal="20dp"
      android:layout_centerHorizontal="true"
      android:background="@drawable/button_round"
      android:clickable="false"
      android:enabled="false"
      android:text="@string/button_do_restore_account"/>

</RelativeLayout>