<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                tools:context=".AuthenticationActivity">

  <ImageView
      android:id="@+id/imageSvl"
      android:layout_width="match_parent"
      android:layout_height="142dp"
      android:layout_marginTop="40dp"
      app:srcCompat="@drawable/svl_logo"/>

  <EditText
      android:id="@+id/text_first_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:paddingVertical="7dp"
      android:layout_below="@+id/imageSvl"
      android:layout_marginTop="80dp"
      android:inputType="textPersonName"
      android:background="@drawable/edittext_round"
      android:backgroundTint="@color/grey"
      android:textColor="@android:color/white"
      android:textCursorDrawable="@null"
      android:textColorHint="@color/hintTextColor"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="18sp"
      android:hint="@string/hint_first_name"
      android:textStyle="italic"/>

  <EditText
      android:id="@+id/text_last_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:paddingVertical="7dp"
      android:inputType="textPersonName"
      android:layout_below="@+id/text_first_name"
      android:layout_marginTop="15dp"
      android:background="@drawable/edittext_round"
      android:backgroundTint="@color/grey"
      android:textColor="@android:color/white"
      android:textCursorDrawable="@null"
      android:textColorHint="@color/hintTextColor"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="18sp"
      android:hint="@string/hint_last_name"
      android:textStyle="italic"/>

  <EditText
      android:id="@+id/text_mail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:paddingVertical="7dp"
      android:inputType="textEmailAddress"
      android:layout_below="@+id/text_last_name"
      android:layout_marginTop="15dp"
      android:background="@drawable/edittext_round"
      android:backgroundTint="@color/grey"
      android:textColor="@android:color/white"
      android:textCursorDrawable="@null"
      android:textColorHint="@color/hintTextColor"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="18sp"
      android:hint="@string/hint_mail"
      android:textStyle="italic"/>

  <Button
      android:id="@+id/button_create_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/text_mail"
      android:layout_marginTop="20dp"
      android:background="@drawable/button_round"
      android:paddingHorizontal="20dp"
      android:layout_centerHorizontal="true"
      android:text="@string/button_create_account"/>

  <Button
      android:id="@+id/button_request_code_dialog"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:paddingHorizontal="20dp"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="70dp"
      android:background="@drawable/button_round"
      android:text="@string/button_restore_account"/>

  <include layout="@layout/progress_overlay"/>

</RelativeLayout>